--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://linkedin.com/in/balajib300602" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
       </div>
       <div class="header-actions">
-        <a href="/profile/src/assets/contact.vcf" class="vcf-download" download="contact.vcf">
+        <a href="/src/assets/contact.vcf" class="vcf-download" download="contact.vcf">
           <i class="fas fa-address-card"></i>
         </a>
         <!-- <a href="resume.pdf" class="download-btn" download aria-label="Download Resume">
